Fix filter section on mobile

--- a/frontend/src/app/fish/fish-list/fish-list.component.scss
+++ b/frontend/src/app/fish/fish-list/fish-list.component.scss
@@ -2,7 +2,8 @@
     display: flex;
     align-content: center;
     align-items: center;
-    height: 60px;
+    min-height: 60px;
+    flex-wrap: wrap;
 
     * {
         margin-right: 10px;
